fixed menu items alignment

--- a/website/style.css
+++ b/website/style.css
@@ -86,8 +86,8 @@ body {
         padding-left: 3.5rem;
         padding-right: 1.5rem;
         font-size: small;
-        margin-left: 0!important;
-        margin-right: 5rem!important;
+        margin-left: auto!important;
+        margin-right: auto!important;
     }   
 
     .wfi-logo{
